# cpp-primer

./: .gitignore
10_1/: CMakeLists.txt  main.cpp
10_11/: CMakeLists.txt  ElimDups.cpp  ElimDups.h  main.cpp
10_12/: CMakeLists.txt  Sales_data.cpp  Sales_data.h  main.cpp
10_13/: CMakeLists.txt  MoreThanFour.cpp  MoreThanFour.h  main.cpp
10_14/: CMakeLists.txt  main.cpp
10_15/: CMakeLists.txt  main.cpp
10_16/: Biggies.cpp  CMakeLists.txt
10_17/: CMakeLists.txt  main.cpp  result.txt
10_18/: Biggies.cpp  CMakeLists.txt
10_19/: Biggies.cpp  CMakeLists.txt
10_2/: CMakeLists.txt  main.cpp
10_20/: Biggies.cpp  CMakeLists.txt
10_21/: main.cpp
10_22/: Biggies.cpp  Biggies.h  CMakeLists.txt  main.cpp
10_24/: CMakeLists.txt  main.cpp
10_25/: Biggies.cpp  Biggies.h  CMakeLists.txt
10_27/: CMakeLists.txt  main.cpp
10_28/: CMakeLists.txt  main.cpp
10_29/: CMakeLists.txt  example.txt  main.cpp
10_3/: main.cpp
10_30/: CMakeLists.txt  main.cpp
10_31/: CMakeLists.txt  main.cpp
10_32/: CMakeLists.txt  main.cpp
10_33/: CMakeLists.txt  Z  even  main.cpp  odd
10_34/: CMakeLists.txt  main.cpp
10_35/: CMakeLists.txt  main.cpp
10_36/: CMakeLists.txt  main.cpp
10_37/: CMakeLists.txt  main.cpp
10_42/: CMakeLists.txt  ElimDups.cpp  ElimDups.h  main.cpp
10_6/: main.cpp
10_9/: CMakeLists.txt  ElimDups.cpp  ElimDups.h  main.cpp
15_39/: AndQuery.h  CMakeLists.txt  OrQuery.cpp  OrQuery.h  Query.cpp  RunQueries.cpp  TextQuery.cpp  main.cpp
19_8/: AndQuery.h  BinaryQuery.cpp  CMakeLists.txt  NotQuery.cpp  QueryBase.h  WordQuery.cpp  main.cpp
(+974 files in other folders)
